# citations-app

./: .gitignore  Marie-spacy-regler.jsonl  citation_finder.py  develop_span_ruler_patterns.ipynb  patterns.jsonl  pyproject.toml  requirements.txt  valid_patterns.jsonl
experimental/: citation_finder_experimental_notebook.ipynb
